@@ -1,3 +1,4 @@
+    - Add API method retweeters_ids
     - Fix update_with_media with utf8 status (RT#72814)
     - Expand Carp::Clan list (should resolve RT#77306)
     - Remove reliance on MooseX::Aliases (issue #35)
